fixed several clipping issues

--- a/css/dingo.css
+++ b/css/dingo.css
@@ -1,13 +1,12 @@
 body {
   font-family: "Comic Sans MS";
-  background-color: yellow;
   background-image: url('/img/junglecore.gif'); 
   background-repeat: repeat; 
   background-size: auto; 
   background-color: yellow; /* Fallback color if image isn't loaded */
   text-align: center;
-  text-align: center;
-  color: black;
+  color: yellow;
+  
 }
 
 p {
@@ -19,4 +18,21 @@ p {
 h1, h2 {
   /*text-stroke: 1px green;*/ 
   -webkit-text-stroke: 1px green;
+}
+
+img {
+  width: 50%; 
+  height: 50%; 
+}
+
+.animal-image {
+  display: block; 
+  margin: 0 auto; 
+}
+
+.centered-text {
+  text-align: center; 
+  max-width: 80%; 
+  margin: 0 auto; 
+  overflow-wrap: break-word; 
 }
